--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,11 @@ python: 3.5
 sudo: required
 
 env:
-  - TRAVIS_NODE_VERSION="6"
-  - TEST_TYPE="unit"
-  - TEST_TYPE="e2e"
+  global:
+    - TRAVIS_NODE_VERSION="6"
+  matrix:
+    - TEST_TYPE="unit"
+    - TEST_TYPE="e2e"
 
 services:
     - mongodb
@@ -35,5 +37,7 @@ before_install:
     - export CHROME_BIN=`which google-chrome` && $CHROME_BIN --version
 script:
     - make run_$TEST_TYPE
+after_script:
+    - test $TEST_TYPE = "e2e" && killall -9 python
 after_success:
     - test $TEST_TYPE = "unit" && coveralls-lcov -v -n coverage/lcov.info > coverage.json && coveralls --merge=coverage.json
