--- a/.travis.yml
+++ b/.travis.yml
@@ -35,8 +35,9 @@ before_install:
     - rm -rf ~/.nvm && git clone https://github.com/creationix/nvm.git ~/.nvm && (cd ~/.nvm && git checkout `git describe --abbrev=0 --tags`) && source ~/.nvm/nvm.sh && nvm install $TRAVIS_NODE_VERSION
     - node --version
     - export CHROME_BIN=`which google-chrome` && $CHROME_BIN --version
+    - chmod a+x ./scripts/*
 script:
-    - make run_$TEST_TYPE
+    - ./scripts/install_run_$TEST_TYPE.sh
 after_script:
     - test $TEST_TYPE = "e2e" && killall -9 python
 after_success:
